minikube-deploy/ingress-routing/templates/libretranslate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libretranslate-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ticket-booking-system.local
    http:
      paths:
      - path: /libretranslate(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: libretranslate
            port:
              number: 5000
